--- a/src/app/basket-details/urgent-tax/urgent-tax.component.html
+++ b/src/app/basket-details/urgent-tax/urgent-tax.component.html
@@ -100,7 +100,7 @@
     <div class="form-group row  pl-4 pr-5">
       <label class="col-sm-4 col-form-label font-weight-bold">1. Check Summon</label>
       <div class="col-sm-8">
-        <button class="bg-light-blue border-0 btn btn-lg text-white">Click Here</button>
+        <a class="bg-light-blue border-0 btn btn-lg text-white">Click Here</a>
       </div>
     </div>
     <div class="form-group row  pl-4 pr-5">
@@ -150,8 +150,8 @@
     </div>
     <div class="row">
       <div class="bg-light p-15 position-absolute pr-5 text-right w-100" style="bottom:0px;">
-        <button (click)="reloadHandler()" class="btn bg-transparent border-0 w-25">Cancel</button>
         <button type="submit" class="bg-green btn text-white w-25">Update</button>
+        <button (click)="reloadHandler()" class="btn bg-transparent border-0 w-25">Cancel</button>
       </div>
     </div>
   </div>
