--- a/src/app/admin/notification/notification.component.html
+++ b/src/app/admin/notification/notification.component.html
@@ -23,7 +23,7 @@
           <div class="row">
             <div class="col-md-12 text-right pr-0">
               <button class="btn btn-info pb-1 pt-2 shadow-none" data-toggle="modal" [attr.data-target]="modalID">
-                <img alt="image" src="assets/img/icons/chat.png">Add Template</button>
+                <img alt="image" src="assets/img/icons/chat.png"> Add {{routeData.page}}</button>
             </div>
           </div>
         </form>
