--- a/src/app/admin/target-achiever/target-achiever.component.html
+++ b/src/app/admin/target-achiever/target-achiever.component.html
@@ -43,7 +43,8 @@
       <ng-template #elseBlock>
         <form #testForm="ngForm">
           <div class="responsive-table-custom">
-            <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8 table-bordered">
+            <table mat-table matSort [dataSource]="dataSource" multiTemplateDataRows
+              class="mat-elevation-z8 table-bordered" matSortDirection="asc" matSortDisableClear>
               <ng-container matColumnDef="userId">
                 <th mat-header-cell *matHeaderCellDef>User ID</th>
                 <td mat-cell *matCellDef="let element" class="font-14 font-weight-600">{{element.userId}}</td>
@@ -65,7 +66,7 @@
                   <div class="d-flex justify-content-center cstm-form">
                     <div class="input-group w-50">
                       <input type="text" class="form-control text-center" #target="ngModel" name="target{{element.id}}"
-                        [(ngModel)]="element.target">
+                        [(ngModel)]="element.target" [disabled]="filter !== (d | date:'MMMM')">
                     </div>
                   </div>
                 </td>
@@ -77,7 +78,8 @@
                   <div class="d-flex justify-content-center cstm-form">
                     <div class="input-group w-50">
                       <input type="text" class="form-control text-center" #achiever="ngModel"
-                        name="achiever{{element.id}}" [(ngModel)]="element.achiever">
+                        name="achiever{{element.id}}" [(ngModel)]="element.achiever"
+                        [disabled]="filter !== (d | date:'MMMM')">
                     </div>
                   </div>
                 </td>
@@ -87,7 +89,7 @@
                 <th class="text-center" mat-header-cell *matHeaderCellDef>Action</th>
                 <td class="text-center" mat-cell *matCellDef="let element">
                   <button class="bg-green btn font-weight-600 pl-4 pr-4 rounded-pill text-white"
-                    (click)="edited(element)">Update</button>
+                    (click)="edited(element)" [disabled]="filter !== (d | date:'MMMM')">Update</button>
                 </td>
               </ng-container>
 
