Follow Up Basket Detail API Implemented

--- a/src/app/basket-details/assist-ncd/assist-ncd.component.html
+++ b/src/app/basket-details/assist-ncd/assist-ncd.component.html
@@ -125,8 +125,8 @@
       </div>
       <div class="row">
         <div class="bg-light p-15 position-absolute pr-5 text-right w-100" style="bottom:0px;">
-          <button class="bg-green btn text-white w-25">Update</button>
-          <button (click)="reloadHandler()" class="btn bg-transparent border-0 w-25">Cancel</button>
+          <button type="submit" class="bg-green btn text-white w-25">Update</button>
+          <button type="button" (click)="reloadHandler()" class="btn bg-transparent border-0 w-25">Cancel</button>
         </div>
       </div>
     </div>
