--- a/src/app/basket-details/urgent-ncd/urgent-ncd.component.html
+++ b/src/app/basket-details/urgent-ncd/urgent-ncd.component.html
@@ -128,7 +128,6 @@
                 formControlName="refundAmount">
               <div *ngIf="refundAmount.invalid && (refundAmount.dirty || refundAmount.touched)">
                 <div *ngIf="refundAmount.errors.pattern" class="error">Invalid Amount</div>
-                <div *ngIf="refundAmount.errors.required" class="error">Amount is required</div>
               </div>
               <textarea rows="3" class="form-control" placeholder="Remarks" formControlName="refundRemark"></textarea>
             </div>
@@ -138,7 +137,6 @@
                 formControlName="topupAmount">
               <div *ngIf="topupAmount.invalid && (topupAmount.dirty || topupAmount.touched)">
                 <div *ngIf="topupAmount.errors.pattern" class="error">Invalid Amount</div>
-                <div *ngIf="topupAmount.errors.required" class="error">Amount is required</div>
               </div>
               <textarea rows="3" class="form-control" placeholder="Remarks" formControlName="topupRemark"></textarea>
             </div>
@@ -149,7 +147,8 @@
       <div class="row">
         <div class="bg-light p-15 position-absolute pr-5 text-right w-100" style="bottom:0px;">
           <button type="submit" class="bg-green btn text-white w-25">Update</button>
-          <button (click)="reloadHandler()" class="btn bg-transparent border-0 w-25">Cancel</button>
+          <button type="button" (click)="cancelService(basketDetailForm.value.vehiclePlateNo)"
+            class="btn bg-transparent border-0 w-25">Cancel</button>
         </div>
       </div>
     </div>
