--- a/src/app/admin/common-basket/common-basket.component.html
+++ b/src/app/admin/common-basket/common-basket.component.html
@@ -126,7 +126,7 @@
 
                       <div *ngSwitchCase="'NCD'" [item]="routeData">
                         <div *ngIf="routeData.subCategory === 'Urgent' ">
-                          <app-urgent-ncd [currentData]="detailComponentData"
+                          <app-urgent-ncd [currentData]="detailComponentData" [page]="routeData.category"
                             *ngIf="detailComponentData !== '' && detailComponentData === element.vehiclePlateNo ">
                           </app-urgent-ncd>
                         </div>
@@ -138,13 +138,14 @@
                       </div>
 
                       <div *ngSwitchCase="'High Risk'" [item]="routeData">
-                        <app-urgent-risk [currentData]="detailComponentData"
+                        <app-urgent-risk [currentData]="detailComponentData" [page]="routeData.category"
                           *ngIf="detailComponentData !== '' && detailComponentData === element.vehiclePlateNo ">
                         </app-urgent-risk>
                       </div>
 
                       <div *ngSwitchCase="'Roadtax'" [item]="routeData">
                         <app-urgent-tax (userData)="addData($event)" [currentData]="detailComponentData"
+                          [page]="routeData.category"
                           *ngIf="detailComponentData !== '' && detailComponentData === element.vehiclePlateNo ">
                         </app-urgent-tax>
                       </div>
@@ -168,7 +169,7 @@
                       </div>
 
                       <div *ngSwitchCase="'Payment Failed'" [item]="routeData">
-                        <app-urgent-ncd [currentData]="detailComponentData"
+                        <app-urgent-ncd [currentData]="detailComponentData" [page]="routeData.category"
                           *ngIf="detailComponentData !== '' && detailComponentData === element.vehiclePlateNo ">
                         </app-urgent-ncd>
                       </div>
