--- a/src/app/basket-details/urgent-risk/urgent-risk.component.html
+++ b/src/app/basket-details/urgent-risk/urgent-risk.component.html
@@ -115,7 +115,6 @@
               formControlName="refundAmount">
             <div *ngIf="refundAmount.invalid && (refundAmount.dirty || refundAmount.touched)">
               <div *ngIf="refundAmount.errors.pattern" class="error">Invalid Amount</div>
-              <div *ngIf="refundAmount.errors.required" class="error">Amount is required</div>
             </div>
             <textarea rows="3" class="form-control" placeholder="Remarks" formControlName="refundRemark"></textarea>
           </div>
@@ -124,7 +123,6 @@
               formControlName="topupAmount">
             <div *ngIf="topupAmount.invalid && (topupAmount.dirty || topupAmount.touched)">
               <div *ngIf="topupAmount.errors.pattern" class="error">Invalid Amount</div>
-              <div *ngIf="topupAmount.errors.required" class="error">Amount is required</div>
             </div>
             <textarea rows="3" class="form-control" placeholder="Remarks" formControlName="topupRemark"></textarea>
           </div>
@@ -134,7 +132,8 @@
     <div class="row">
       <div class="bg-light p-15 position-absolute pr-5 text-right w-100" style="bottom:0px;">
         <button type="submit" class="bg-green btn text-white w-25">Update</button>
-        <button (click)="reloadHandler()" class="btn bg-transparent border-0 w-25">Cancel</button>
+        <button type="button" (click)="cancelService(basketDetailForm.value.vehiclePlateNo)"
+          class="btn bg-transparent border-0 w-25">Cancel</button>
       </div>
     </div>
   </div>
