--- a/src/app/basket-details/urgent-tax/urgent-tax.component.html
+++ b/src/app/basket-details/urgent-tax/urgent-tax.component.html
@@ -106,19 +106,19 @@
     <div class="form-group row  pl-4 pr-5">
       <label class="col-sm-4 col-form-label font-weight-bold">2. To Customer </label>
       <div class="col-sm-8">
-        <a class="bg-light border-0 btn mr-1 form-group rounded-pill text-dark text-white" *ngIf="phoneNo"
-          data-toggle="modal" data-target="#callModal"
-          (click)="sendUserData(basketDetailForm.value.customerName, basketDetailForm.value.email, basketDetailForm.value.phoneNo)">
-          <img class="pr-2" src="assets/img/icons/phone_icon.png" />{{phoneNo}}
+        <a *ngIf="basketDetailForm.value.phoneNo" href="tel:{{basketDetailForm.value.phoneNo}}"
+          class="bg-light border-0 btn mr-1 form-group rounded-pill text-dark text-white"
+          (click)="sendUserData(basketDetailForm.value.email, basketDetailForm.value.phoneNo)">
+          <img class="pr-2" src="assets/img/icons/phone_icon.png" />{{basketDetailForm.value.phoneNo}}
         </a>
         <a class="bg-light border-0 btn mr-1 form-group rounded-pill text-dark text-white" data-toggle="modal"
-          data-target="#new_email_Modal" *ngIf="email"
-          (click)="sendUserData(basketDetailForm.value.customerName, basketDetailForm.value.email, basketDetailForm.value.phoneNo)">
-          <img class="pr-2" src="assets/img/icons/email.png" />{{email}}
+          data-target="#new_email_Modal" *ngIf="basketDetailForm.value.email"
+          (click)="sendUserData(basketDetailForm.value.email, basketDetailForm.value.phoneNo)">
+          <img class="pr-2" src="assets/img/icons/email.png" />{{basketDetailForm.value.email}}
         </a>
         <a class="bg-light border-0 btn form-group rounded-pill text-dark text-white" data-toggle="modal"
-          data-target="#sms_chat_model" *ngIf="phoneNo"
-          (click)="sendUserData(basketDetailForm.value.customerName, basketDetailForm.value.email, basketDetailForm.value.phoneNo)">
+          data-target="#sms_chat_model" *ngIf="basketDetailForm.value.phoneNo"
+          (click)="sendUserData(basketDetailForm.value.email, basketDetailForm.value.phoneNo)">
           <img class="pr-2" src="assets/img/icons/sms.png" />SMS
         </a>
       </div>
