--- a/src/app/basket-details/assist-market/assist-market.component.html
+++ b/src/app/basket-details/assist-market/assist-market.component.html
@@ -1,5 +1,5 @@
 <h2 class="bg-blue-grey font-17 mb-0 p-15 pl-4">Car Register #{{currentData}}</h2>
-<form [formGroup]="basketDetailForm">
+<form [formGroup]="basketDetailForm" (ngSubmit)="submitHandler(basketDetailForm.valid)">
   <div class="pl-4 row">
     <div class="col-md-6 border-right pl-4 pr-5">
       <div class="form-group row mt-3">
@@ -108,7 +108,7 @@
       <div class="form-group row  pl-4 pr-5">
         <label class="col-sm-5 col-form-label font-weight-bold">2. Change Market Value</label>
         <div class="col-sm-5">
-          <input type="text" class="form-control" placeholder="Amount">
+          <input type="text" class="form-control" placeholder="Amount" formControlName="marketValue">
         </div>
       </div>
       <div class="form-group row  pl-4 pr-5">
@@ -123,8 +123,9 @@
       </div>
       <div class="row">
         <div class="bg-light p-15 position-absolute pr-5 text-right w-100" style="bottom:0px;">
-          <button class="bg-green btn text-white w-25">Update</button>
-          <button (click)="reloadHandler()" class="btn bg-transparent border-0 w-25">Cancel</button>
+          <button type="submit" class="bg-green btn text-white w-25">Update</button>
+          <button type="button" class="btn bg-transparent border-0 w-25"
+            (click)="cancelService(basketDetailForm.value.vehiclePlateNo)">Cancel</button>
         </div>
       </div>
     </div>
