--- a/src/app/basket-details/urgent-ncd/urgent-ncd.component.html
+++ b/src/app/basket-details/urgent-ncd/urgent-ncd.component.html
@@ -147,8 +147,8 @@
       <div class="row">
         <div class="bg-light p-15 position-absolute pr-5 text-right w-100" style="bottom:0px;">
           <button type="submit" class="bg-green btn text-white w-25">Update</button>
-          <button type="button" (click)="cancelService(basketDetailForm.value.vehiclePlateNo)"
-            class="btn bg-transparent border-0 w-25">Cancel</button>
+          <button type="button" class="btn bg-transparent border-0 w-25"
+            (click)="cancelService(basketDetailForm.value.vehiclePlateNo)">Cancel</button>
         </div>
       </div>
     </div>
