--- a/src/app/admin/report-roadtax/report-roadtax.component.html
+++ b/src/app/admin/report-roadtax/report-roadtax.component.html
@@ -142,7 +142,8 @@
             <div class="form-group row  pl-4 pr-5 mt-3">
               <label class="col-sm-4 col-form-label font-weight-bold">Status</label>
               <div class="col-sm-6">
-                <select class="font-weight-600 form-control" formControlName="action">
+                <select class="font-weight-600 form-control" formControlName="action"
+                  (ngModelChange)="onActionSelectorChanged($event)">
                   <option selected value="null" disabled>Select Status</option>
                   <option *ngFor="let status of statusList" value="{{status.value}}">{{status.option}}</option>
                 </select>
@@ -153,7 +154,6 @@
             </div>
 
             <ng-container [ngSwitch]="actionSelector">
-
               <div *ngSwitchCase="'Refund'" [item]="actionSelector">
                 <div class="form-group row  pl-4 pr-5">
                   <label class="col-sm-4 col-form-label font-weight-bold"> </label>
@@ -211,8 +211,9 @@
 
             <div class="row">
               <div class="bg-light p-15 position-absolute pr-5 text-right w-100" style="bottom:0px;">
-                <button (click)="resetHandler()" class="btn bg-transparent border-0 w-25">Cancel</button>
                 <button type="submit" class="bg-green btn text-white w-25">Submit</button>
+                <button (click)="cancelService(reportDetailForm.value.vehiclePlateNo)"
+                  class="btn bg-transparent border-0 w-25">Cancel</button>
               </div>
             </div>
           </div>
