--- a/src/app/basket-details/urgent-tax/urgent-tax.component.html
+++ b/src/app/basket-details/urgent-tax/urgent-tax.component.html
@@ -100,7 +100,8 @@
     <div class="form-group row  pl-4 pr-5">
       <label class="col-sm-4 col-form-label font-weight-bold">1. Check Summon</label>
       <div class="col-sm-8">
-        <a class="bg-light-blue border-0 btn btn-lg text-white">Click Here</a>
+        <a (click)="goToLink('https://www.myeg.com.my/services/pdrm')"
+          class="bg-light-blue border-0 btn btn-lg text-white">Click Here</a>
       </div>
     </div>
     <div class="form-group row  pl-4 pr-5">
