--- a/src/app/admin/account-settings/account-settings.component.html
+++ b/src/app/admin/account-settings/account-settings.component.html
@@ -78,7 +78,7 @@
           <div class="form-group row">
             <label for="inputEmail3" class="col-sm-3 col-form-label">Repeat Password :</label>
             <div class="col-sm-9">
-              <input type="text" class="form-control w-75 full_width" formControlName="repeatPassword">
+              <input type="password" class="form-control w-75 full_width" formControlName="repeatPassword">
               <div *ngIf="accountSettingForm.errors?.misMatch" class="error">Password and Repeat Password does not
                 match</div>
             </div>
