--- a/src/app/widgets/quote-widget/quote-widget.component.html
+++ b/src/app/widgets/quote-widget/quote-widget.component.html
@@ -7,7 +7,9 @@
       </h4>
     </ng-template>
     <ng-template #NoQuote>
-      <h4 class="count_no_color font-50 text-right mt-5">0 <span class="text-muted font-11">Quote</span></h4>
+      <h4 class="count_no_color font-50 text-right mt-5">0
+        <span class="text-muted font-11">Quote</span>
+      </h4>
     </ng-template>
   </div>
   <div class="col-md-6 text-center pb-1">
@@ -23,7 +25,9 @@
       </h4>
     </ng-template>
     <ng-template #NoCover>
-      <h4 class="count_no_color font-50 text-right mt-5">0 <span class="text-muted font-11">Cover Note</span></h4>
+      <h4 class="count_no_color font-50 text-right mt-5">0
+        <span class="text-muted font-11">Cover Note</span>
+      </h4>
     </ng-template>
   </div>
   <div class="col-md-6 text-center pb-1">
